# KickstartRT_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cla.yml
KickstartRT_demo/: CMakeLists.txt  KickstartRT_Composite.cpp  KickstartRT_Composite.h  KickstartRT_Sample_Main.cpp
include/donut/app/: DeviceManager.h
include/donut/engine/: Scene.h  SceneGraph.h
include/donut/render/: DeferredLightingPass.h  ForwardShadingPass.h  GBuffer.h
include/donut/shaders/: deferred_lighting_cb.h  motion_vectors.hlsli
kickstartrt_demo/: CMakeLists.txt  KickstartRT_Sample_Main.cpp
shaders/: DonutShaders.cfg
shaders/app/: KickStart_Composite_cs.hlsl
shaders/passes/: deferred_lighting_cs.hlsl  forward_ps.hlsl  gbuffer_ps.hlsl
signatures/: CLA.json
src/app/: UserInterfaceUtils.cpp
src/app/dx11/: DeviceManager_DX11.cpp
src/app/dx12/: DeviceManager_DX12.cpp
src/app/vulkan/: DeviceManager_VK.cpp
src/engine/: Scene.cpp
src/render/: DeferredLightingPass.cpp  DrawStrategy.cpp  ForwardShadingPass.cpp  GBuffer.cpp
